--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ Copyright 2013, Josh Cope
    Site Styles
    ========================================================================== */
 body {
-  background-image: url("../images/background/background2.jpg");
+  background-image: url("../images/background2.jpg");
   background-attachment: fixed;
   background-position: center;
   background: #ffffff;
