nav background color
nav background color

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@ h1, h2, h3, h4 {
 	padding-left: 10px;
 	text-align:left;
 }
-
+nav {
+	background-color: #bac0c5;
+}
 p {
 }
 /* =============================================================================
