--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ h1, h2, h3, h4 {
 nav {
 	background-color: #bac0c5;
 }
+header {
+background-color: #000000;
+}
 p {
 }
 /* =============================================================================
