--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@ h1, h2, h3, h4 {
 	text-align:left;
 }
 nav {
-	background-color: #bac0c5;
+	background-color: #336633;
 }
 header {
-background-color: #000000;
+background-color: #336633;
 }
 p {
+background-color: #f3f9f4;
 }
 /* =============================================================================
    Page Styles
