--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ h1, h2, h3, h4 {
 	text-shadow: 1px 1px 1px #bac0c5;
 	padding-left: 10px;
 	text-align:left;
+	background-color: #336633
 }
 nav {
 	background-color: #336633;
