--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ background-color: #336633;
 footer {
 background-color: #336633;
 color: #000000;
+text-align: center;
 }
 p {
 background-color: #f3f9f4;
