--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ Copyright 2013, Josh Cope
 body {
   background-image: url("../images/background2.jpg");
   background-attachment: fixed;
-  background-position: center;
+  background-position:50% 50%;
   color: #333;
   font-size: 16px;
   height: auto;
