--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ background-color: #f3f9f4;
 }
 
 .container {
-  background-color: #bac0c5;
+  background-color: #000000;
   background-repeat: repeat-y;
   margin-bottom: 20px;
 }
