--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,8 @@ background-color: #f3f9f4;
 }
 
 .container {
-  background-color: #000000;
-  background-repeat: repeat-y;
-  margin-bottom: 20px;
+  background-color: #bac0c5;
+  background-repeat: repeat;
 }
 
 .container {
