--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   background-image: url("../images/background2.jpg");
   background-attachment: fixed;
   background-position: center;
+  font-family; 'Maven Pro', sans-serif;
   color: #333;
   font-size: 16px;
   height: auto;
