--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
   font-size: 16px;
   height: auto;
   padding-bottom: 20px;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 a {
@@ -53,6 +55,9 @@ text-align: center;
 }
 p {
 background-color: #f3f9f4;
+}
+.container .wrapper {
+background-color: #000000;
 }
 /* =============================================================================
    Page Styles
