--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ text-align: center;
 p {
 background-color: #f3f9f4;
 }
-.container .wrapper {
+.container .grid_12 {
 background-color: #000000;
 }
 /* =============================================================================
