--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ li {
 h1, h2, h3, h4 {
 	color: #ffffff;
 	font-family: 'Leckerli One', cursive;
-	padding-left: 0px;
+	padding-left: 0px 0px 0px 0px;
 	text-align:left;
 	background-color: #336633
 	
