--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ background-color: #f3f9f4;
 .container .grid_12 {
 background-color: #000000;
 }
+section {
+background-color: #ffffff;
+}
 /* =============================================================================
    Page Styles
    ========================================================================== */
