--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h1, h2, h3, h4 {
 	color: #ffffff;
 	font-family: 'Leckerli One', cursive;
 	padding-left: 0px;
+	margin-left: 0px;
 	text-align:left;
 	background-color: #336633
 	
