--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body {
   margin-left:auto;
   margin-right:auto;
 }
+wrapper {
+  padding-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 a {
   color: #33CC33;
