--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ h1, h2, h3, h4 {
 	margin-left: 2px;
 	text-align:left;
 	background-color: #336633
-	
 }
 nav {
 	background-color: #336633;
@@ -67,6 +66,8 @@ background-color: #000000;
 section {
 background-color: #ffffff;
 padding: 0px 0px 0px 0px;
+margin-left: 0px;
+maring-right: 0px;
 }
 /* =============================================================================
    Page Styles
