section bk color change
section bk color change

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ margin-left: 0px;
 margin-right: 0px;
 }
 section {
-background-color: #ffffff;
+background-color: #f3f9f4;
 padding: 0px 0px 0px 0px;
 margin-left: 0px;
 margin-right: 0px;
