--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ h1, h2, h3, h4 {
 	margin-left: 2px;
 	text-align:left;
 	background-color: #336633
+	text-shadow: 0px 3px 0px 3px #00000;
 }
 nav {
 	background-color: #336633;
