--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ li {
 }
 h1, h2, h3, h4 {
 	color: #ffffff;
-	font-family: 'Maven Pro', cursive;
+	font-family: 'Maven Pro', Sans-serif;
 	padding-left: 0px;
 	margin-left: 2px;
 	text-align:left;
