--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ padding: 0px 0px 0px 0px;
 margin-left: 0px;
 margin-right: 0px;
 }
+#submit {
+-webkit-border-radius: 40px;
+-moz-border-radius: 40px;
+border-radius: 40px;
+}
 /* =============================================================================
    Page Styles
    ========================================================================== */
