--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,17 @@ li {
 	list-style-type: none;
 	display: inline;
 }
-h1, h2, h3, h4 {
+h2, h3, h4 {
 	color: #ffffff;
-	font-family: 'Maven Pro', Sans-serif;
+	font-family: 'Maven Pro', sans-serif;
+	padding-left: 0px;
+	margin-left: 2px;
+	text-align:left;
+	background-color: #336633
+}
+h1, {
+	color: #ffffff;
+	font-family: 'Leckerli One', cursive;
 	padding-left: 0px;
 	margin-left: 2px;
 	text-align:left;
