--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ li {
 	display: inline;
 }
 h2, h3, h4 {
-	color: #ffffff;
+	color: #ff4e00;
 	font-family: 'Maven Pro', sans-serif;
 	padding-left: 2px;
 	margin-left: 2px;
