--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ li {
 	display: inline;
 }
 h2, h3, h4 {
-	color: #000000;
+	color: #ffffff;
 	font-family: 'Maven Pro', sans-serif;
 	padding-left: 2px;
 	margin-left: 2px;
@@ -45,7 +45,7 @@ h2, h3, h4 {
 	background-color: #336633
 }
 h1 {
-	color: #ffffff;
+	color: #ff4e00;
 	font-family: 'Leckerli One', cursive;
 	padding-left: 2px;
 	margin-left: 2px;
