--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ Copyright 2013, Josh Cope
    Site Styles
    ========================================================================== */
 body {
-  background-image: url("../images/background2.jpg");
+  background-image: url("../images/background3.jpg");
+  background-color: #336633;
   background-attachment: fixed;
   background-position: center;
   font-family; 'Maven Pro', sans-serif;
