--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2, h3, h4 {
 	background-color: #336633
 }
 h1 {
-	color: #ff4e00;
+	color: #f7941e;
 	font-family: 'Leckerli One', cursive;
 	padding-left: 2px;
 	margin-left: 2px;
