--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,12 @@ margin-left: 0px;
 margin-right: 0px;
 }
 #submit {
--webkit-border-radius: 40px;
--moz-border-radius: 40px;
-border-radius: 40px;
+background-color: #f7941e;
+border-bottom-left-radius:10px;
+border-bottom-right-radius:10px;
+border-top-left-radius:10px;
+border-top-right-radius:10px;
+padding:5px 20px;
 }
 /* =============================================================================
    Page Styles
