--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,16 @@ padding:5px 20px;
    Page Styles
    ========================================================================== */
 #form {
-  border: 0px solid #666;
+  border: 0px solid #f7941e;
   overflow: hidden;
-  padding: 10px 0;
   text-align: left;
+  background-color: #ffffff;
+  border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+  margin-bottom:150px;
+  padding-top:10px;
 }
 
 .container {
