--- a/css/style.css
+++ b/css/style.css
@@ -85,12 +85,22 @@ margin-left: 0px;
 margin-right: 0px;
 }
 #submit {
-background-color: #f7941e;
-border-bottom-left-radius:10px;
-border-bottom-right-radius:10px;
-border-top-left-radius:10px;
-border-top-right-radius:10px;
-padding:5px 20px;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 13;
+  -moz-border-radius: 13;
+  border-radius: 13px;
+  text-shadow: 1px 1px 3px #666666;
+  font-family: Georgia;
+  color: #ffffff;
+  font-size: 20px;
+  background: #f7951e;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 /* =============================================================================
    Page Styles
