--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ wrapper {
 }
 a {
   color: #f7941e;
-  text-decoration: none;
+  height:30px;
 }
 
 a:hover {
@@ -106,7 +106,7 @@ margin-right: 0px;
    Page Styles
    ========================================================================== */
 #form {
-  border: 2px solid #f7941e;
+  border: 0px solid #f7941e;
   overflow: hidden;
   text-align: left;
   background-color: #ffffff;
