--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #336633;
   background-attachment: fixed;
   background-position: center;
-  font-family; 'Maven Pro', Sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   color: #333;
   font-size: 16px;
   height: auto;
@@ -26,7 +26,7 @@ wrapper {
 }
 a {
   color: #f7941e;
-  height:30px;
+  height:40px;
 }
 
 a:hover {
