--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,10 @@ background-color: #f3f9f4;
 padding: 0px 0px 0px 0px;
 margin-left: 0px;
 margin-right: 0px;
+
 }
-#submit {
-  background: #3498db;
+.css3button{
+ background: #f7941e;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
@@ -97,11 +98,13 @@ margin-right: 0px;
   text-shadow: 1px 1px 3px #666666;
   font-family: Georgia;
   color: #ffffff;
-  font-size: 20px;
-  background: #f7951e;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
+	overflow: hidden;
+	width: 12.500em;
+	height: 6.250em; 
+	text-align: center;
+	font-size: 0.875em;
+	color: #0d0d0c;
+	padding: 10px 20px;
 /* =============================================================================
    Page Styles
    ========================================================================== */
