--- a/css/style.css
+++ b/css/style.css
@@ -87,23 +87,24 @@ margin-right: 0px;
 }
 .css3button{
  background: #f7941e;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  background-image: -webkit-linear-gradient(top, #f7941e, #2980b9);
+  background-image: -moz-linear-gradient(top, #f7941e, #2980b9);
+  background-image: -ms-linear-gradient(top, #f7941e, #2980b9);
+  background-image: -o-linear-gradient(top, #f7941e, #2980b9);
+  background-image: linear-gradient(to bottom, #f7941e, #2980b9);
   -webkit-border-radius: 13;
   -moz-border-radius: 13;
   border-radius: 13px;
   text-shadow: 1px 1px 3px #666666;
   font-family: Georgia;
-	overflow: hidden;
-	width: 11.500em;
-	height: 3.250em; 
-	text-align: center;
-	font-size: 0.875em;
-	color: #ffffff;
-	padding: 10px 20px;
+  overflow: hidden;
+  width: 11.500em;
+  height: 3.250em; 
+  text-align: center;
+  font-size: 1.0em;
+  color: #ffffff;
+  padding: 10px 20px;
+  margin-bottom:30px;
 /* =============================================================================
    Page Styles
    ========================================================================== */
