--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,11 @@ margin-right: 0px;
   margin-bottom:150px;
   padding-top:10px;
 }
-
+input, select, textarea {
+  font-family:inherit;
+  font-size:100%;
+  margin:0;
+}
 .container {
   background-color: #bac0c5;
   background-repeat: repeat;
