--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,15 @@ input, select, textarea {
   font-size:100%;
   margin:0;
 }
+input {
+  border-bottom-left-radius:7px;
+  border-bottom-right-radius:7px;
+  border-top-left-radius:7px;
+  border-top-right-radius:7px;
+  color:#B3B2B2;
+  height:1.5em;
+  margin-bottom:15px;
+}
 .container {
   background-color: #bac0c5;
   background-repeat: repeat;
