--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,12 @@ margin-right: 0px;
   margin-bottom:150px;
   padding-top:10px;
 }
-input, select, textarea {
+#form input, select, textarea {
   font-family:inherit;
   font-size:100%;
   margin:0;
 }
-input {
+#form input {
   border-bottom-left-radius:7px;
   border-bottom-right-radius:7px;
   border-top-left-radius:7px;
