--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ li {
 	margin: 0 auto;
 	list-style-type: none;
 	display: inline;
+	font-size:1.125em;
+	padding:0.8em;
 }
 h2, h3, h4 {
 	color: #ffffff;
